# VkTriangle

./: CMakeLists.txt  README.md  compile_shaders.bat  hello_triangle_application.cpp  hello_triangle_application.h  main.cpp  shaders.h.in
shaders/: shader.frag  shader.vert
